--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-streamlit
-mediapipe
-opencv-python
-numpy
-Pillow
-
+streamlit==1.24.1
+opencv-python-headless==4.7.0.72
+numpy==1.24.3
+mediapipe==0.9.1.0
